--- a/src/style/main.css
+++ b/src/style/main.css
@@ -108,17 +108,14 @@ body {
 }
 
 /*Estilização do rodapé*/
-.content {
-  min-height: 100%; /* Garante que o conteúdo preencha o espaço restante */
-  padding-bottom: 100px; /* Altura do rodapé */
-  box-sizing: border-box;
-}
-
 footer {
   background-color: #333;
   color: white;
   padding: 20px 0;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
 .footer-content {
@@ -199,7 +196,7 @@ footer {
 .banner {
   position: relative;
   width: 100%;
-  height: 100px; /* Altura do banner */
+  height: 200px; /* Altura do banner */
   background-color: #444; /* Cor de fundo caso a imagem não carregue */
   overflow: hidden;
 }
@@ -223,6 +220,7 @@ footer {
 .banner-content h1 {
   font-size: 2.5em;
   margin: 0;
+  color: white;
 }
 
 .banner-content p {
