--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -129,16 +129,17 @@ body {
 
 
 .content {
-    min-height: 100%; /* Garante que o conteúdo preencha o espaço restante */
-    padding-bottom: 100px; /* Altura do rodapé */
-    box-sizing: border-box;
+   
 }
 
-footer {
+footer {  
     background-color: #333;
     color: white;
     padding: 20px 0;
     text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
 
 .footer-content {
@@ -220,7 +221,7 @@ footer {
 .banner {
     position: relative;
     width: 100%;
-    height: 100px; /* Altura do banner */
+    height: 200px; /* Altura do banner */
     background-color: #444; /* Cor de fundo caso a imagem não carregue */
     overflow: hidden;
 }
@@ -240,9 +241,10 @@ footer {
     color: white;
 }
 
-.banner-content h1 {
+.banner-content h1 { 
     font-size: 2.5em;
     margin: 0;
+    color: white;
 }
 
 .banner-content p {
