--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,6 +17,8 @@ body {
 }
 
 .header {
+    position: fixed;
+    bottom: 0;
     background-color: $green-light-opaque; // Cor de fundo verde claro opaco
     width: 100%;
     display: flex;
@@ -125,21 +127,71 @@ body {
     }
 }
 
-/*Estilização do rodapé*/
+// Estilização do contéudo dos produtos 
 
-
-.content {
-   
+//Querie para responsividade em dispositivos móveis
+@media (max-width: 600px) {
+    .produto {
+        width: 100%; /* Cada seção ocupa a largura total da tela em dispositivos móveis */
+        flex: 1 1 100%; /* Cada seção ocupa a largura total da tela em dispositivos menores */
+    }
 }
 
-footer {  
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta colunas automaticamente */
+    gap: 10px; /* Espaçamento entre os itens */
+}
+
+.container2 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta colunas automaticamente */
+    gap: 10px; /* Espaçamento entre os itens */
+}
+
+.container3 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta colunas automaticamente */
+    gap: 10px; /* Espaçamento entre os itens */
+}
+
+.container4 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta colunas automaticamente */
+    gap: 10px; /* Espaçamento entre os itens */
+}
+
+.produto {
+    flex: 1 1 200px; /* Flex-grow, flex-shrink, flex-basis */
+            margin: 10px; /* Espaçamento entre as seções */
+            padding: 20px;
+            border: 1px solid #ccc;
+            text-align: center; /* Centraliza o conteúdo */
+}
+
+.img {
+    max-width: 100%;  /* Garante que as imagens não ultrapassem o tamanho da seção */
+    height: auto;
+}
+
+.content {
+    flex: 1;
+    padding: 20px;
+    background-color: #f5f5f5;
+    overflow: auto; 
+}
+/*Estilização do rodapé*/
+
+.footer { 
     background-color: #333;
     color: white;
     padding: 20px 0;
     text-align: center;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
+    padding-bottom: 50px;
+    flex-shrink: 0;
 }
 
 .footer-content {
